# Arome2FVM

./: .gitignore  JAX_MIGRATION_SUMMARY.md  README.md  hello.py  pyproject.toml  requirements.txt
config/: alps.yml
data/: arome_hybrid_coordinate.csv
src/: app.py  arome.py  arome2fvm.py  arome_file.py  arome_reader.py  convert.py  driver.py  fvm_driver.py  levels.py  levels_conversion.py  mass2height.py  vertical_velocity.py  writer.py
src/arome2fvm/: arome.py  arome2fvm.py  arome_reader.py  env.py  fields.py  levels.py  mass2height.py  physical_constants.py  physical_parameters.py  vertical_velocity.py  writer.py
src/arome2fvm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/common/: mass2height.py  vertical_velocity.py
src/common/stencils/: mass2height.py  vertical_velocity.py
src/common/utils/: arome_keys.py  fields.py  gt4py_config.py
src/drivers/: cli.py  convert.py  fvm_driver.py  plot.py
src/operators/: mass2height.py  vertical_div2velocity.py  vertical_velocity.py
src/operators/stencils/: mass2height.py
src/plot/: plot.py
tests/: test_arome.py  test_mass2height.py  test_reader.py  test_vertical_velocity.py
tests/arome2fvm/: test_arome.py  test_reader.py
tests/operators/: test_mass2height.py
