[project]
name = "arome2fvm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.6",
    "netcdf4>=1.7.2",
    "typer>=0.19.2",
    "xarray[io]>=2025.6.1",
]

[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=65.5.0', 'wheel']

[project.scripts]
arome2fvm = "drivers.cli:app"
